<?xml version="1.0"?>
<package>
  <name>kalman_filter</name>
  <version>0.0.0</version>
  <description>The kalman_filter package</description>

  <maintainer email="george@todo.todo">george</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

 
  <export>
  </export>
</package>
